Hourly scheduled redeploy 80631af546761c60c060321b55ff5cf0b687e7e0

--- a/apps/frontend.html
+++ b/apps/frontend.html
@@ -490,14 +490,12 @@
 <li>
 <a href="https://www.gov.uk/foreign-travel-advice">https://www.gov.uk/foreign-travel-advice</a> (travel advice index page)</li>
 <li><a href="https://www.gov.uk/find-local-council">https://www.gov.uk/find-local-council</a></li>
-<li><a href="https://www.gov.uk/passport-interview-office">https://www.gov.uk/passport-interview-office</a></li>
 <li>
 <a href="https://www.gov.uk/roadmap">https://www.gov.uk/roadmap</a> (GOV.UK public facing roadmap)</li>
 </ul>
 <h3 id="licence-finders">Licence finders</h3>
 <p>Some examples:</p>
 <ul>
-<li><a href="https://www.gov.uk/guidance/hire-out-horses-licence-england">https://www.gov.uk/guidance/hire-out-horses-licence-england</a></li>
 <li><a href="https://www.gov.uk/premises-licence">https://www.gov.uk/premises-licence</a></li>
 <li><a href="https://www.gov.uk/temporary-events-notice">https://www.gov.uk/temporary-events-notice</a></li>
 <li><a href="https://www.gov.uk/apply-skip-permit">https://www.gov.uk/apply-skip-permit</a></li>
@@ -532,6 +530,57 @@
 <li><a href="https://www.gov.uk/bank-holidays">https://www.gov.uk/bank-holidays</a></li>
 <li><a href="https://www.gov.uk/when-do-the-clocks-change">https://www.gov.uk/when-do-the-clocks-change</a></li>
 </ul>
+<h3 id="misc">Misc</h3>
+<table>
+<thead>
+<tr>
+<th>URL</th>
+<th>Related views</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<a href="http://www.gov.uk/school-term-holiday-dates">http://www.gov.uk/school-term-holiday-dates</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/pay-council-tax">http://www.gov.uk/pay-council-tax</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/find-covid-19-lateral-flow-test-site">http://www.gov.uk/find-covid-19-lateral-flow-test-site</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/rubbish-collection-day">http://www.gov.uk/rubbish-collection-day</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/apply-council-tax-reduction">http://www.gov.uk/apply-council-tax-reduction</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/apply-for-disabled-bus-pass">http://www.gov.uk/apply-for-disabled-bus-pass</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/apply-free-school-meals">http://www.gov.uk/apply-free-school-meals</a>
+</td>
+<td>
+<code>_base_page</code> &lt;!&ndash; raw HTML omitted &ndash;&gt;<code>local_transaction/search</code>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://www.gov.uk/register-offices">http://www.gov.uk/register-offices</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/ukonline-centre-internet-access-computer-training">http://www.gov.uk/ukonline-centre-internet-access-computer-training</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/find-theory-test-centre">http://www.gov.uk/find-theory-test-centre</a>&lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/id-scan-eu-settlement-scheme">http://www.gov.uk/id-scan-eu-settlement-scheme</a>
+</td>
+<td>
+<code>_base_page</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>place/show</code>
+</td>
+</tr>
+<tr>
+<td><a href="http://www.gov.uk/provide-journey-contact-details-before-travel-uk">http://www.gov.uk/provide-journey-contact-details-before-travel-uk</a></td>
+<td>
+<code>publication_metadata</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>_base_page</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>show</code>
+</td>
+</tr>
+<tr>
+<td><a href="http://www.gov.uk/contact-the-dvla/y/">http://www.gov.uk/contact-the-dvla/y/</a></td>
+<td><code>flow</code></td>
+</tr>
+<tr>
+<td><a href="http://www.gov.uk/check-a-passport-travel-europe">http://www.gov.uk/check-a-passport-travel-europe</a></td>
+<td>
+<code>_publication_metadata</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>_base_page</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>transaction/show</code>
+</td>
+</tr>
+<tr>
+<td>
+<a href="http://www.gov.uk/renew-driving-licence-at-70">http://www.gov.uk/renew-driving-licence-at-70</a>    &lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/check-mot-history">http://www.gov.uk/check-mot-history</a>    &lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/mot-testing-service">http://www.gov.uk/mot-testing-service</a>    &lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests">http://www.gov.uk/order-coronavirus-rapid-lateral-flow-tests</a>   &lt;!&ndash; raw HTML omitted &ndash;&gt;<a href="http://www.gov.uk/check-legal-aid">http://www.gov.uk/check-legal-aid</a>
+</td>
+<td>
+<code>_base_page</code>&lt;!&ndash; raw HTML omitted &ndash;&gt;<code>transaction/show</code>
+</td>
+</tr>
+</tbody>
+</table>
 <h2 id="nomenclature">Nomenclature</h2>
 <ul>
 <li>
