--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/230636.ja">英国外務省の年次人権報告書で日本の死刑制度を解説</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/celebrating-three-great-english-exports-in-2015--6">Celebrating three GREAT English exports in 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/257425.ja">英国ショッピングウィークを今秋、日本で初開催</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-uk-supports-the-kosovo-security-force-with-medical-training--2">The UK Supports the Kosovo Security Force with Medical Training</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/232340.es">Expertos internacionales analizan planes nacionales de empresa y derechos humanos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-now-open--2">Applications for 2014/15 Chevening Scholarships now open</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/215578.es-419">LSE visitará Quito, Guayaquil y Cuenca en Febrero</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
