--- a/document-types/closed_consultation.html
+++ b/document-types/closed_consultation.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: closed_consultation</h1>
 
-  <p>There are <strong>992</strong> pages with document type
+  <p>There are <strong>991</strong> pages with document type
 &lsquo;closed_consultation&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,13 +364,13 @@
 <li><a href="https://www.gov.uk/government/consultations/womens-health-strategy-call-for-evidence">Women&rsquo;s Health Strategy: Call for Evidence</a></li>
 <li><a href="https://www.gov.uk/government/consultations/changes-to-permitted-development-rights-for-electronic-communications-infrastructure-technical-consultation">Changes to permitted development rights for electronic communications infrastructure: technical consultation</a></li>
 <li><a href="https://www.gov.uk/government/consultations/womens-health-strategy-call-for-evidence-easy-read">Women&rsquo;s Health Strategy: Call for Evidence (easy read)</a></li>
-<li><a href="https://www.gov.uk/government/consultations/arrangements-for-non-exam-assessment-for-qualifications-in-2022">Arrangements for non-exam assessment for qualifications in 2022</a></li>
 <li><a href="https://www.gov.uk/government/consultations/new-plan-for-immigration">New Plan for Immigration</a></li>
 <li><a href="https://www.gov.uk/government/consultations/planning-for-the-future">Planning for the future</a></li>
 <li><a href="https://www.gov.uk/government/consultations/making-vaccination-a-condition-of-deployment-in-older-adult-care-homes">Making vaccination a condition of deployment in older adult care homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/green-paper-transforming-public-procurement">Green Paper: Transforming public procurement</a></li>
 <li><a href="https://www.gov.uk/government/consultations/the-future-buildings-standard">The Future Buildings Standard</a></li>
 <li><a href="https://www.gov.uk/government/consultations/role-of-biomass-in-achieving-net-zero-call-for-evidence">Role of biomass in achieving net zero: call for evidence</a></li>
+<li><a href="https://www.gov.uk/government/consultations/ending-the-sale-of-energy-drinks-to-children">Ending the sale of energy drinks to children</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=closed_consultation&amp;count=10">Source query from Search API</a></p>
 
