--- a/document-types/consultation_outcome.html
+++ b/document-types/consultation_outcome.html
@@ -330,7 +330,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: consultation_outcome</h1>
 
-  <p>There are <strong>4599</strong> pages with document type
+  <p>There are <strong>4600</strong> pages with document type
 &lsquo;consultation_outcome&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -363,6 +363,7 @@
 <ul>
 <li><a href="https://www.gov.uk/government/consultations/first-homes">First Homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/consultation-on-guidance-in-relation-to-appeals-under-the-gqaa-framework-in-2021">Consultation on guidance in relation to appeals under the GQAA framework in 2021</a></li>
+<li><a href="https://www.gov.uk/government/consultations/arrangements-for-non-exam-assessment-for-qualifications-in-2022">Arrangements for non-exam assessment for qualifications in 2022</a></li>
 <li><a href="https://www.gov.uk/government/consultations/exchange-of-driving-licences-issued-in-taiwan-the-united-arab-emirates-ukraine-and-the-republic-of-north-macedonia">Exchange of driving licences issued in Taiwan, the United Arab Emirates, Ukraine and the Republic of North Macedonia</a></li>
 <li><a href="https://www.gov.uk/government/consultations/taking-action-on-climate-risk-improving-governance-and-reporting-by-occupational-pension-schemes-response-and-consultation-on-regulations">Taking action on climate risk: improving governance and reporting by occupational pension schemes – response and consultation on regulations</a></li>
 <li><a href="https://www.gov.uk/government/consultations/good-work-plan-establishing-a-new-single-enforcement-body-for-employment-rights">Good work plan: establishing a new single enforcement body for employment rights</a></li>
@@ -370,7 +371,6 @@
 <li><a href="https://www.gov.uk/government/consultations/public-service-pension-schemes-consultation-changes-to-the-transitional-arrangements-to-the-2015-schemes">Public service pension schemes consultation: changes to the transitional arrangements to the 2015 schemes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/driving-test-language-support">Driving test language support</a></li>
 <li><a href="https://www.gov.uk/government/consultations/energy-company-obligation-eco3-2018-to-2022">Energy Company Obligation: ECO3, 2018 to 2022</a></li>
-<li><a href="https://www.gov.uk/government/consultations/smart-meter-policy-framework-post-2020-minimum-annual-targets-and-reporting-thresholds-for-energy-suppliers">Smart meter policy framework post 2020: minimum annual targets and reporting thresholds for energy suppliers</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=consultation_outcome&amp;count=10">Source query from Search API</a></p>
 
