Hourly scheduled redeploy 2fe30bd83352b3af314e51c79c1251ebbc9e4774

--- a/manual/on-call.html
+++ b/manual/on-call.html
@@ -212,7 +212,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/b29e5880282bfba2484db4b22cc767d644b5c790">21 Apr 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/573a92113b9e36443cd9a9bcc5228cf677905dac">17 Jun 2021</a>
 </div>
 
  <h1 id='header'>Out of hours support (on-call)</h1> <blockquote>
@@ -226,6 +226,7 @@ to keep GOV.UK running at night, on the weekends and on public holidays.</p>
 <ol>
 <li>Have the numbers of other people on your shift saved in your phone. This
 includes whoever is on Escalations. Get these numbers from PagerDuty.</li>
+<li>Set to be notified for every new message in the #govuk-incident Slack channel by clicking &ldquo;Details&rdquo;, &ldquo;Change notifications&rdquo; and selecting &ldquo;Every new message.&rdquo;</li>
 <li>Make sure you know <a href="https://docs.google.com/spreadsheets/d/1a02TOV0Uee6lSCuUIh3G_J1ZPx6bXI2yz56afHOsQZI/edit#gid=823200360">how to contact the rest of SMT</a>, if the on-call SMT is unavailable.</li>
 <li>Ensure you have an up to date local copy of the <a href="https://github.com/alphagov/govuk-developer-docs/">Developer Docs</a> repository
 and that you can build it.</li>
