--- a/apps/account-api/api.html
+++ b/apps/account-api/api.html
@@ -364,7 +364,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/account-api/commit/e47ccbcfebb75c391e22ec3b2b15227dc3c0fdba">11 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/account-api/commit/f08e6a173742ccbc1f268bb254c4f26d9752d5bc">11 Jun 2021</a>
 </div>
 
   <h1 class="page-title">account-api: API documentation</h1>
@@ -394,6 +394,9 @@ management. This API is not for other government services.</p>
 <li><a href="#get-apiattributesnames"><code>GET /api/attributes/names</code></a></li>
 <li><a href="#get-apitransition-checker-email-subscription"><code>GET /api/transition-checker-email-subscription</code></a></li>
 <li><a href="#post-apitransition-checker-email-subscription"><code>POST /api/transition-checker-email-subscription</code></a></li>
+<li><a href="#get-apiemail-subscriptionssubscription_name"><code>GET /api/email-subscriptions/:subscription_name</code></a></li>
+<li><a href="#put-apiemail-subscriptionssubscription_name"><code>PUT /api/email-subscriptions/:subscription_name</code></a></li>
+<li><a href="#delete-apiemail-subscriptionssubscription_name"><code>DELETE /api/email-subscriptions/:subscription_name</code></a></li>
 <li><a href="#get-apisaved-pages"><code>GET /api/saved-pages</code></a></li>
 <li><a href="#get-apisaved-pagespage_path"><code>GET /api/saved-pages/:page_path</code></a></li>
 <li><a href="#put-apisaved-pagespage_path"><code>PUT /api/saved-pages/:page_path</code></a></li>
@@ -918,6 +921,164 @@ end
     "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg=="
 }
 </code></pre>
+<h3 id="get-apiemail-subscriptionssubscription_name"><code>GET /api/email-subscriptions/:subscription_name</code></h3>
+<p>Get the details of a named email subscription</p>
+<h4 id="request-headers">Request headers</h4>
+<ul>
+<li>
+<code>GOVUK-Account-Session</code>
+<ul>
+<li>the user's session identifier</li>
+</ul>
+</li>
+</ul>
+<h4 id="request-parameters">Request parameters</h4>
+<ul>
+<li>
+<code>subscription_name</code>
+<ul>
+<li>the name of the subscription</li>
+</ul>
+</li>
+</ul>
+<h4 id="json-response-fields">JSON response fields</h4>
+<ul>
+<li>
+<code>govuk_account_session</code> <em>(optional)</em>
+<ul>
+<li>a new session identifier</li>
+</ul>
+</li>
+<li>
+<code>email_subscription</code>
+<ul>
+<li>details of the subscription</li>
+</ul>
+</li>
+</ul>
+<h4 id="response-codes">Response codes</h4>
+<ul>
+<li>404 if there is no such subscription (or if it has been deleted)</li>
+<li>401 if the session identifier is invalid</li>
+<li>200 otherwise</li>
+</ul>
+<h4 id="example-request-response">Example request / response</h4>
+<p>Request (with gds-api-adapters):</p>
+<pre lang="ruby"><code>GdsApi.account_api.get_email_subscription(
+    name: "transition-checker",
+    govuk_account_session: "session-identifier",
+)
+</code></pre>
+<pre lang="json"><code>{
+    "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg==",
+    "email_subscription": {
+      "name": "transition-checker",
+      "topic_slug": "brexit-results-12345",
+      "email_alert_api_subscription_id": "cd5f6972-faf3-4f1c-bb76-3774b0a389f0"
+    },
+}
+</code></pre>
+<h3 id="put-apiemail-subscriptionssubscription_name"><code>PUT /api/email-subscriptions/:subscription_name</code></h3>
+<p>Create or update a named email subscription</p>
+<h4 id="request-headers">Request headers</h4>
+<ul>
+<li>
+<code>GOVUK-Account-Session</code>
+<ul>
+<li>the user's session identifier</li>
+</ul>
+</li>
+</ul>
+<h4 id="request-parameters">Request parameters</h4>
+<ul>
+<li>
+<code>subscription_name</code>
+<ul>
+<li>the name of the subscription</li>
+</ul>
+</li>
+</ul>
+<h4 id="json-request-parameters">JSON request parameters</h4>
+<ul>
+<li>
+<code>topic_slug</code>
+<ul>
+<li>the email-alert-api topic slug</li>
+</ul>
+</li>
+</ul>
+<h4 id="json-response-fields">JSON response fields</h4>
+<ul>
+<li>
+<code>govuk_account_session</code> <em>(optional)</em>
+<ul>
+<li>a new session identifier</li>
+</ul>
+</li>
+<li>
+<code>email_subscription</code>
+<ul>
+<li>details of the subscription</li>
+</ul>
+</li>
+</ul>
+<h4 id="response-codes">Response codes</h4>
+<ul>
+<li>422 if the <code>topic_slug</code> parameter is missing</li>
+<li>401 if the session identifier is invalid</li>
+<li>200 otherwise</li>
+</ul>
+<h4 id="example-request-response">Example request / response</h4>
+<p>Request (with gds-api-adapters):</p>
+<pre lang="ruby"><code>GdsApi.account_api.put_email_subscription(
+    name: "transition-checker",
+    topic_slug: "brexit-results-12345",
+    govuk_account_session: "session-identifier",
+)
+</code></pre>
+<pre lang="json"><code>{
+    "govuk_account_session": "YWNjZXNzLXRva2Vu.cmVmcmVzaC10b2tlbg==",
+    "email_subscription": {
+      "name": "transition-checker",
+      "topic_slug": "brexit-results-12345",
+      "email_alert_api_subscription_id": "96ae61d6-c2a1-48cb-8e67-da9d105ae381"
+    },
+}
+</code></pre>
+<h3 id="delete-apiemail-subscriptionssubscription_name"><code>DELETE /api/email-subscriptions/:subscription_name</code></h3>
+<p>Cancel and remove a named email subscription</p>
+<h4 id="request-headers">Request headers</h4>
+<ul>
+<li>
+<code>GOVUK-Account-Session</code>
+<ul>
+<li>the user's session identifier</li>
+</ul>
+</li>
+</ul>
+<h4 id="request-parameters">Request parameters</h4>
+<ul>
+<li>
+<code>subscription_name</code>
+<ul>
+<li>the name of the subscription</li>
+</ul>
+</li>
+</ul>
+<h4 id="response-codes">Response codes</h4>
+<ul>
+<li>404 if there is no such subscription (or if it has been deleted)</li>
+<li>401 if the session identifier is invalid</li>
+<li>204 otherwise</li>
+</ul>
+<h4 id="example-request-response">Example request / response</h4>
+<p>Request (with gds-api-adapters):</p>
+<pre lang="ruby"><code>GdsApi.account_api.delete_email_subscription(
+    name: "transition-checker",
+    govuk_account_session: "session-identifier",
+)
+</code></pre>
+<p>Response is status code only.</p>
 <h3 id="get-apisaved-pages"><code>GET /api/saved-pages</code></h3>
 <p>Returns all a user's saved pages</p>
 <h4 id="request-headers">Request headers</h4>
