--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.york.gov.uk" class="govuk-link">York City Council</a></li>
-      <li><a href="http://www.maidstone.gov.uk/" class="govuk-link">Maidstone Borough Council</a></li>
-      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
-      <li><a href="http://www.southhams.gov.uk" class="govuk-link">South Hams District Council</a></li>
-      <li><a href="http://www.nfdc.gov.uk" class="govuk-link">New Forest District Council</a></li>
-      <li><a href="http://www.walthamforest.gov.uk/" class="govuk-link">London Borough of Waltham Forest Council</a></li>
-      <li><a href="http://www.hertsdirect.org/" class="govuk-link">Hertfordshire County Council</a></li>
-      <li><a href="http://www.eden.gov.uk/" class="govuk-link">Eden District Council</a></li>
-      <li><a href="http://www.inverclyde.gov.uk" class="govuk-link">Inverclyde Council</a></li>
-      <li><a href="https://www.malvernhills.gov.uk/" class="govuk-link">Malvern Hills District Council</a></li>
+      <li><a href="http://www.haringey.gov.uk/" class="govuk-link">London Borough of Haringey Council</a></li>
+      <li><a href="https://www.nhs.uk/nhs-services/online-services/nhs-app/" class="govuk-link">NHS App</a></li>
+      <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
+      <li><a href="http://www.hastings.gov.uk" class="govuk-link">Hastings Borough Council</a></li>
+      <li><a href="http://www.arun.gov.uk/" class="govuk-link">Arun District Council</a></li>
+      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
+      <li><a href="http://www.brent.gov.uk" class="govuk-link">London Borough of Brent Council</a></li>
+      <li><a href="http://www.parliament.uk/business/publications/hansard/" class="govuk-link">Hansard - UK Parliament</a></li>
+      <li><a href="http://www.boston.gov.uk" class="govuk-link">Boston Borough Council</a></li>
+      <li><a href="http://www.carrickfergus.org" class="govuk-link">Carrickfergus Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
