Hourly scheduled redeploy 8f6bfd5df4159060fb7d9d8943ce60571509fd58

--- a/document-types/esi_fund.html
+++ b/document-types/esi_fund.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/european-structural-investment-funds/covid-19-response-neets-engagement-in-new-anglia-oc24s21p1840">CLOSED: COVID-19 Response NEETs Engagement in New Anglia – OC24S21P1840</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/skills-for-the-mature-workforce-project-call-in-worcester-lep-oc38s21p1825">CLOSED: Skills for the Mature Workforce project call in Worcester LEP (OC38S21P1825)</a></li>
 <li><a href="https://www.gov.uk/european-structural-investment-funds/at-risk-of-neet-and-neet-provision-in-greater-birmingham-and-solihull-lep-area-oc12s19p1442">CLOSED: At risk of NEET and NEET provision in Greater Birmingham and Solihull LEP area (OC12S19P1442)                                                                                                                                    </a></li>
-<li><a href="https://www.gov.uk/european-structural-investment-funds/young-peoples-mental-health-and-employability-support-programme-sheffield-city-region-oc28s21p1837">Young People’s Mental Health and Employability Support Programme - Sheffield City Region (OC28S21P1837)   </a></li>
+<li><a href="https://www.gov.uk/european-structural-investment-funds/young-peoples-mental-health-and-employability-support-programme-sheffield-city-region-oc28s21p1837">CLOSED: Young People’s Mental Health and Employability Support Programme - Sheffield City Region (OC28S21P1837)   </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=esi_fund&amp;count=10">Source query from Search API</a></p>
 
