--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.southbucks.gov.uk" class="govuk-link">South Bucks District Council</a></li>
-      <li><a href="http://www.winchester.gov.uk" class="govuk-link">Winchester City Council</a></li>
-      <li><a href="http://www.cheshireeast.gov.uk" class="govuk-link">Cheshire East Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
-      <li><a href="http://www.north-ayrshire.gov.uk" class="govuk-link">North Ayrshire Council</a></li>
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
-      <li><a href="http://www.basingstoke.gov.uk" class="govuk-link">Basingstoke and Deane Borough Council</a></li>
       <li><a href="http://publicappointments.cabinetoffice.gov.uk/" class="govuk-link">Public Appointments - Cabinet Office</a></li>
-      <li><a href="http://www.bradford.gov.uk" class="govuk-link">City of Bradford Metropolitan District Council</a></li>
+      <li><a href="http://www.north-ayrshire.gov.uk" class="govuk-link">North Ayrshire Council</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.chichester.gov.uk" class="govuk-link">Chichester District Council</a></li>
+      <li><a href="http://www.stevenage.gov.uk" class="govuk-link">Stevenage Borough Council</a></li>
+      <li><a href="https://www.gov.uk/alerts" class="govuk-link">Emergency Alerts</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
+      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
+      <li><a href="https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/" class="govuk-link">Book a coronavirus vaccination - NHS</a></li>
+      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
