Hourly scheduled redeploy e46147f32708b165d8661fcda819d714adc9ace5

--- a/manual/learn-govuk.html
+++ b/manual/learn-govuk.html
@@ -313,6 +313,7 @@
   <h4 id='learning-gov-uk'>Learning GOV.UK</h4></p>
 <p><ul>
     <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
+    <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
     <li><a href="/manual/where-to-find-what.html">Where to find what documentation</a></li>
   </ul>
   <h4 id='logging'>Logging</h4></p>
@@ -371,6 +372,7 @@
 
           <ul class="govuk-list">
             <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
+            <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
             <li><a href="/manual/where-to-find-what.html">Where to find what documentation</a></li>
           </ul>
         </div>
