--- a/manual/where-to-find-what.html
+++ b/manual/where-to-find-what.html
@@ -256,6 +256,7 @@
 
           <ul class="govuk-list">
             <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
+            <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
           </ul>
         </div>
 
