--- a/manual.html
+++ b/manual.html
@@ -347,6 +347,7 @@
     <h3>Learn</h3>
     <ul>
         <li><a href="/manual/non-ha-node-classes.html">Node classes without redundancy</a></li>
+        <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
         <li><a href="/manual/notify-emergency-alerts.html">What is GOV.UK Notify Emergency Alerts?</a></li>
     </ul>
   <h2 id='2nd-line'>2nd line</h2>
@@ -648,6 +649,7 @@
     <h3>Learn</h3>
     <ul>
         <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
+        <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
         <li><a href="/manual/where-to-find-what.html">Where to find what documentation</a></li>
     </ul>
   <h2 id='logging'>Logging</h2>
