--- a/manual/get-started.html
+++ b/manual/get-started.html
@@ -435,6 +435,7 @@ Enter token <span class="k">for </span>arn:aws:iam::123456789012:mfa/firstname.l
 
           <ul class="govuk-list">
             <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
+            <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
             <li><a href="/manual/where-to-find-what.html">Where to find what documentation</a></li>
           </ul>
         </div>
