--- a/manual/tech-lead-responsibilities.html
+++ b/manual/tech-lead-responsibilities.html
@@ -10,23 +10,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
-    <title>Ask for help - GOV.UK Developer Documentation</title>
+    <title>Responsibilities of a Tech Lead - GOV.UK Developer Documentation</title>
 
     <link href="/stylesheets/manifest.css" rel="stylesheet" />
 
-    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/ask-for-help.html">
+    <link rel="canonical" href="https://docs.publishing.service.gov.uk/manual/tech-lead-responsibilities.html">
 
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:domain" content="docs.publishing.service.gov.uk" />
       <meta name="twitter:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
-      <meta name="twitter:title" content="Ask for help - GOV.UK Developer Documentation" />
-      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/ask-for-help.html" />
+      <meta name="twitter:title" content="Responsibilities of a Tech Lead - GOV.UK Developer Documentation" />
+      <meta name="twitter:url" content="https://docs.publishing.service.gov.uk/manual/tech-lead-responsibilities.html" />
 
       <meta property="og:image" content="https://docs.publishing.service.gov.uk/images/govuk-large.png" />
       <meta property="og:site_name" content="GOV.UK Developer Documentation" />
-      <meta property="og:title" content="Ask for help" />
+      <meta property="og:title" content="Responsibilities of a Tech Lead" />
       <meta property="og:type" content="object" />
-      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/ask-for-help.html" />
+      <meta property="og:url" content="https://docs.publishing.service.gov.uk/manual/tech-lead-responsibilities.html" />
 
     
   </head>
@@ -131,7 +131,39 @@
                   <a href='/manual.html' class="toc__back-link govuk-link">&lsaquo; Manual</a>
   <ul>
   <li>
-    <a href="#header"><span>Ask for help</span></a>
+    <a href="#header"><span>Responsibilities of a Tech Lead</span></a>
+    <ul>
+      <li>
+        <a href="#identifying-and-planning-work"><span>Identifying and planning work</span></a>
+      </li>
+      <li>
+        <a href="#writing-up-work"><span>Writing up work</span></a>
+      </li>
+      <li>
+        <a href="#onboarding-new-team-members"><span>Onboarding new team members</span></a>
+      </li>
+      <li>
+        <a href="#managing-leavers"><span>Managing leavers</span></a>
+      </li>
+      <li>
+        <a href="#being-aware-of-the-health-of-your-team"><span>Being aware of the health of your team</span></a>
+      </li>
+      <li>
+        <a href="#removing-technical-blockers"><span>Removing technical blockers</span></a>
+      </li>
+      <li>
+        <a href="#championing-good-practice"><span>Championing good practice</span></a>
+      </li>
+      <li>
+        <a href="#attending-tech-lead-stand-up-and-writing-the-weeknote"><span>Attending tech lead stand up and writing the weeknote</span></a>
+      </li>
+      <li>
+        <a href="#not-knowing-everything-about-gov-uk"><span>Not knowing everything about GOV.UK</span></a>
+      </li>
+      <li>
+        <a href="#not-needing-to-be-on-top-of-everything"><span>Not needing to be on top of everything</span></a>
+      </li>
+    </ul>
   </li>
 </ul>
 
@@ -182,56 +214,31 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/a18b11772bc2c89287c0aa9871466991ec82d750">5 Feb 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/401f61753c8cf6324b8017f57478c508818f701d">21 Jun 2021</a>
 </div>
 
- <h1 id='header'>Ask for help</h1> <p>The GOV.UK 2nd Line team:</p>
-
-<ul>
-<li>monitors the GOV.UK hosting platform and applications, and works to fix any
-issues</li>
-<li>calls on experienced members of other teams to assist in incidents</li>
-<li>deploys changes on behalf of teams that don’t have sufficient access</li>
-<li>supports the software and processes that deploy code</li>
-<li>triages technical issues and recommends when to escalate to Reliability
-Engineering</li>
-</ul>
-<p>The GOV.UK development community:</p>
-
-<ul>
-<li>helps each other with specialised knowledge about specific areas of the
-platform</li>
-<li>supports each other with issues deploying changes to GOV.UK</li>
-<li>ensures missions are delivered technically in the best and most appropriate
-way</li>
-</ul>
-<p>The GOV.UK Replatforming team:</p>
-
-<ul>
-<li>supports the infrastructure used to run and make changes to GOV.UK</li>
-<li>handles updates to <code>*.gov.uk</code> DNS (excluding <code>*.publishing.service.gov.uk</code>)</li>
-<li>obtains and renews TLS certificates</li>
-</ul>
-<p>The GOV.UK RE AUTOM8 team:</p>
-
-<ul>
-<li>maintains centrally-provided services such as Logit</li>
-</ul>
-<p>If you and your colleagues can’t resolve a technical issue, problem or
-question, you should escalate it through, in order:</p>
-
-<ol>
-<li>The Technical Lead on the team</li>
-<li>The Lead Developer on the programme</li>
-<li>The Lead Architect</li>
-</ol>
-<p>If 2nd Line instructs you to escalate something to GOV.UK Replatforming,
-raise a ticket on Zendesk and assign it to the <code>3rd Line--GDS Reliability
-Engineering</code> queue. You should also raise a ticket if the issue is related to
-an ongoing incident for tracking purposes, but you can speak to the team
-directly to get it more immediate attention.</p>
-<p>If you speak to GOV.UK Replatforming about a process only they know about,
-they will work with you to document the process for all of GOV.UK.</p>
+ <h1 id='header'>Responsibilities of a Tech Lead</h1> <p>Tech leading is a role within a team that any developer can take up. They work closely with the product manager(s) and delivery manager(s), helping to provide their technical knowledge to support the team and guide the work. They will guide the technical direction of the mission by working with technical architects and the developers on the team.</p>
+<h2 id='identifying-and-planning-work'>Identifying and planning work</h2><p>Working with the product manager(s) and within the context of your team to identify potential technical work that is relevant for the team. It’s also important to advise on the technical direction or how potential work fits within the wider technical architecture of GOV.UK.</p>
+<p>Planning how specific pieces of work fit within the rest of the team’s work and sometimes tailoring the work based on who is in the team. This could be down to learning and development, the expertise in the team, and chats with developers.</p>
+<h2 id='writing-up-work'>Writing up work</h2><p>As a tech lead, a significant portion of time will be spent writing cards for developers. This is either from scratch or adding suitable technical information to existing cards.</p>
+<p>Typically, a card will contain information about what the piece of work is and why it’s being done, plus some useful context and background to help anybody pick it up, and sometimes a prescriptive acceptance criteria/definition of done.</p>
+<p>Anybody on the team should feel comfortable picking up any card, even if they don’t have the required knowledge, they should know where to get that knowledge.</p>
+<h2 id='onboarding-new-team-members'>Onboarding new team members</h2><p>For existing teams, tech leads should on-board new developers to the team. You should meet with developers new to the team to introduce the team’s work and overall goals. Discuss the new developer’s objectives so you can help ensure there is suitable work for them and generally help settle them in to be productive team members.</p>
+<p>Ensure the developer is in the correct team in the <a href="https://github.com/alphagov/seal/blob/main/config/alphagov.yml">seal</a>.</p>
+<p>If the developer is new to GOV.UK, then it’s worth taking them through the <a href="https://docs.google.com/presentation/d/1nAE65Og04JYNAc0VjYaUYLqNLuUOM9r3Mvo0PGFy_Zk/edit">overview slides</a>.</p>
+<h2 id='managing-leavers'>Managing leavers</h2><p>When a team member leaves GOV.UK, the tech lead must raise a PR in the GOV.UK <a href="https://github.com/alphagov/govuk-user-reviewer">user reviewer</a> (<a href="https://github.com/alphagov/govuk-user-reviewer/pull/542">sample pr</a>) and ensure a <a href="https://trello.com/c/IQIV54Pc/378-leaver">leaver’s trello card</a> is created on the 2nd line trello board.</p>
+<h2 id='being-aware-of-the-health-of-your-team'>Being aware of the health of your team</h2><p>It’s worth having regular catch ups and chats with the developers on your team (if that’s something the developers would like) to get an idea of whether they’re enjoying their time. This might overlap with what your team’s delivery manager may already be doing, so it’s worth coordinating this to avoid too many meetings.</p>
+<p>Things it’s useful to know could be their yearly goals, any areas of tech they’d like to learn or are interested in, whether they’re confident with the team’s work, and whether there is anything they’d change. It might also sometimes be helpful to point developers towards opportunities they might not already be aware of (presentations, leading on mission work, etc).</p>
+<p>During team ceremonies, it’s worth being aware of how each developer contributes, and giving opportunities for those who might not feel as comfortable speaking.</p>
+<h2 id='removing-technical-blockers'>Removing technical blockers</h2><p>Making sure that every developer on your team has the right access to the third party services that we use. This includes Sentry, Logit, PagerDuty, AWS, etc. If you don’t have the right access yourself, you can ask a fellow tech lead or the lead devs.</p>
+<p>Making sure that every developer on your team has access to our own services. This includes SSH access to machines, appropriate Slack channels, etc.</p>
+<p>Helping the developers on your team with their work either by pointing them towards people who are knowledgeable and would be able to help, or by providing your own knowledge in the form of pairing or answering questions.</p>
+<h2 id='championing-good-practice'>Championing good practice</h2><p>As tech lead you have the opportunity to champion good developer practice in terms of making sure things are well tested, properly reviewed, that pull requests leave a useful trail for the next person, and the Trello cards (or equivalent) are kept up to date.</p>
+<p>Essentially a tech lead’s role is to be the face that represents all the standards and principles by which developers need to work with.</p>
+<h2 id='attending-tech-lead-stand-up-and-writing-the-weeknote'>Attending tech lead stand up and writing the weeknote</h2><p>Every week there’s a GOV.UK tech lead stand up where each tech lead will talk about the work their team did in the last week, and let other tech leads become aware of anything that might affect them. At the same time, this is a good opportunity to share things that you’ve found out with the rest of your team so they’re aware of wider changes happening on GOV.UK.</p>
+<p>There’s also a weeknote which every team contributes to and is shared around the developer community on GOV.UK.</p>
+<h2 id='not-knowing-everything-about-gov-uk'>Not knowing everything about GOV.UK</h2><p>It’s important to be aware that you don’t need to know everything about GOV.UK to be a tech lead. The role is just as much about leadership and “soft skills”, than it is about technical ability and knowledge of the platform.</p>
+<h2 id='not-needing-to-be-on-top-of-everything'>Not needing to be on top of everything</h2><p>There’s no requirement to oversee absolutely everything your team does, and it’s better if you don’t. Every responsibility of a tech lead can at times be taken up by other people on the team. They will sometimes spot work and write cards, they’ll be able to help other team members, they might also be able to give people access to things, they’ll make technical decisions about the system, and review PRs.</p>
 
 
   <div class='related-content'>
@@ -244,7 +251,6 @@ they will work with you to document the process for all of GOV.UK.</p>
 
           <ul class="govuk-list">
             <li><a href="/manual/dictionary.html">Dictionary of concepts on GOV.UK</a></li>
-            <li><a href="/manual/tech-lead-responsibilities.html">Responsibilities of a Tech Lead</a></li>
             <li><a href="/manual/where-to-find-what.html">Where to find what documentation</a></li>
           </ul>
         </div>
@@ -253,6 +259,7 @@ they will work with you to document the process for all of GOV.UK.</p>
           <h4>How to...</h4>
 
           <ul class="govuk-list">
+            <li><a href="/manual/ask-for-help.html">Ask for help</a></li>
             <li><a href="/manual/get-started.html">Get started on GOV.UK</a></li>
             <li><a href="/manual/learn-govuk.html">Learn how GOV.UK works</a></li>
           </ul>
@@ -267,8 +274,8 @@ they will work with you to document the process for all of GOV.UK.</p>
 
           <aside>
               <ul class="contribution-banner">
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/ask-for-help.html.md">View source</a></li>
-                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Ask%20for%20help'&amp;body=Problem%20with%20'Ask%20for%20help'%20(https://docs.publishing.service.gov.uk/manual/ask-for-help.html)">Report problem</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/blob/master/source/manual/tech-lead-responsibilities.html.md">View source</a></li>
+                <li><a href="https://github.com/alphagov/govuk-developer-docs/issues/new?labels=bug&amp;title=Re:%20'Responsibilities%20of%20a%20Tech%20Lead'&amp;body=Problem%20with%20'Responsibilities%20of%20a%20Tech%20Lead'%20(https://docs.publishing.service.gov.uk/manual/tech-lead-responsibilities.html)">Report problem</a></li>
                 <li><a href="https://github.com/alphagov/govuk-developer-docs">GitHub Repo</a></li>
               </ul>
           </aside>
