Hourly scheduled redeploy 54cc72249a98d1522ec7c7df63479383fabed746

--- a/document-types/detailed_guide.html
+++ b/document-types/detailed_guide.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/guidance/coronavirus-covid-19-test-to-release-for-international-travel">Coronavirus (COVID-19): Test to Release for international travel</a></li>
 <li><a href="https://www.gov.uk/guidance/travel-advice-novel-coronavirus">Travel abroad and coronavirus (COVID-19)</a></li>
 <li><a href="https://www.gov.uk/guidance/coronavirus-covid-19-wedding-and-civil-partnership-ceremonies-receptions-and-celebrations">Coronavirus (COVID-19): Wedding and civil partnership ceremonies, receptions and celebrations</a></li>
-<li><a href="https://www.gov.uk/guidance/demonstrating-your-covid-19-vaccination-status-when-travelling-abroad">Demonstrating your COVID-19 vaccination status when travelling abroad</a></li>
+<li><a href="https://www.gov.uk/guidance/demonstrating-your-covid-19-vaccination-status-when-travelling-abroad">Demonstrating your COVID-19 vaccination status</a></li>
 <li><a href="https://www.gov.uk/guidance/booking-and-staying-in-a-quarantine-hotel-when-you-arrive-in-england">Booking and staying in a quarantine hotel if you’ve been in a red list country</a></li>
 <li><a href="https://www.gov.uk/guidance/claim-for-wages-through-the-coronavirus-job-retention-scheme">Claim for wages through the Coronavirus Job Retention Scheme</a></li>
 </ul>
