--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -360,16 +360,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.lbhf.gov.uk/">London Borough of Hammersmith and Fulham Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.manchester.gov.uk">Manchester City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.waverley.gov.uk/">Waverley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.winchester.gov.uk">Winchester City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hinckleyandbosworthonline.org.uk">Hinckley and Bosworth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.tamworth.gov.uk">Tamworth Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.maidstone.gov.uk/">Maidstone Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.wyrebc.gov.uk/">Wyre Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
 <li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.monmouthshire.gov.uk">Monmouthshire County Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hounslow.gov.uk">London Borough of Hounslow Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.north-ayrshire.gov.uk">North Ayrshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.southtyneside.info/">South Tyneside Metropolitan Borough Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
