--- a/manual/tools.html
+++ b/manual/tools.html
@@ -210,13 +210,13 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/9c65a609f8056a1aab61b4832407a315ac427019">22 Dec 2020</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/4038d090d9d2766ed9d8827492f5c1e017016fab">22 Jun 2021</a>
 </div>
 
  <h1 id='header'>Tools: Icinga, Grafana and Graphite, Kibana, Fabric and friends</h1> <h2 id='icinga'>Icinga</h2><p><a href="/manual/icinga.html">Icinga</a> is used to monitor alerts that we have set up.</p>
 <h2 id='grafana'>Grafana</h2><p><a href="/manual/grafana.html">Grafana</a> lets us create nice dashboards using data from Graphite, Elasticsearch (Logit) and Cloudwatch.</p>
-<h2 id='graphite'>Graphite</h2><p><a href="https://graphite.publishing.service.gov.uk/">https://graphite.publishing.service.gov.uk/</a></p>
-<p>Graphite is a graphing tool that allows us to draw graphs of various metrics that we put into it. Graphite has two main views: a <a href="https://graphite.publishing.service.gov.uk/composer">composer</a> to build individual graphs and a <a href="https://graphite.publishing.service.gov.uk/dashboard">dashboard</a> to put multiple graphs together.</p>
+<h2 id='graphite'>Graphite</h2><p><a href="https://graphite.blue.production.govuk.digital/">https://graphite.blue.production.govuk.digital/</a></p>
+<p>Graphite is a graphing tool that allows us to draw graphs of various metrics that we put into it. Graphite has two main views: a <a href="https://graphite.blue.production.govuk.digital/composer">composer</a> to build individual graphs and a <a href="https://graphite.blue.production.govuk.digital/dashboard">dashboard</a> to put multiple graphs together.</p>
 <p>We are currently locked at version 0.9.13.</p>
 <p>To build a graph, you can add one or more graph targets in the composer by either clicking on them in the left frame.
 Some useful targets are:</p>
